[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mu_pipelines_configuration_provider"
authors = [
    {name = "MosaicSoft", email = "mupipelines@gmail.com"},
]
description = "mu_pipelines_configuration_provider"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["data movement", "spark", "etl"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mu-pipelines-interfaces >=0.1.4",
]
dynamic = ["version"]

[project.optional-dependencies]

[project.scripts]

[tool.pyright]
venvPath = "."
venv = ".venv"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/